openpearl-code/testsuite/must_not_compile/00_basics/040_dcl_list_without_brace.prl
MODULE(m1);

PROBLEM;
   DCL f1,f2 FIXED;

MODEND;
